# ElectronBili

./: ElectronBili.xmind  README.md
1.GuiGuider_prject/bilibili_final/: bilibili_final.guiguider
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/config/: MIMXRT1062xxxxA.xml  MIMXRT1062xxxxA_part.xml
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/: CMakeCache.txt  CMakeLists.txt  Makefile  armgcc.cmake  build_all.bat  build_all.sh  build_flexspi_nor_sdram_debug.bat  build_flexspi_nor_sdram_debug.sh  build_flexspi_nor_sdram_release.bat  build_flexspi_nor_sdram_release.sh  cmake_install.cmake  flags.cmake  output.map
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/CMSIS/: CMSIS_Include_core_cm_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/board/: lvgl_support.c
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/component/lists/: component_lists_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/component/serial_manager/: component_serial_manager_MIMXRT1062.cmake  component_serial_manager_uart_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/component/uart/: component_lpuart_adapter_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/custom/: custom.c
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/device/: device_MIMXRT1062_CMSIS_MIMXRT1062.cmake  device_MIMXRT1062_system_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/doc/: readme.txt
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/drivers/: driver_cache_armv7_m7_MIMXRT1062.cmake  driver_clock_MIMXRT1062.cmake  driver_common_MIMXRT1062.cmake  driver_elcdif_MIMXRT1062.cmake  driver_igpio_MIMXRT1062.cmake  driver_iomuxc_MIMXRT1062.cmake  driver_lpi2c_MIMXRT1062.cmake  driver_lpuart_MIMXRT1062.cmake  driver_pxp_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/flexspi_nor_sdram_release/: lvgl_guider.elf
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/freertos/freertos_kernel/: middleware_freertos-kernel_MIMXRT1062.cmake  middleware_freertos-kernel_extension_MIMXRT1062.cmake  middleware_freertos-kernel_heap_4_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/lvgl/: middleware_lvgl_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/lvgl/lvgl/src/gpu/: lv_gpu_nxp_pxp.c  lv_gpu_nxp_pxp.h  lv_gpu_nxp_pxp_osa.c  lv_gpu_nxp_pxp_osa.h  lv_gpu_nxp_vglite.c  lv_gpu_nxp_vglite.h
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/source/: lv_conf.h
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/startup/: device_MIMXRT1062_startup_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/touchpanel/: driver_ft5406_rt_MIMXRT1062.cmake  driver_gt911_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/utilities/: utilities_misc_utilities_MIMXRT1062.cmake  utility_assert_MIMXRT1062.cmake  utility_debug_console_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/video/: driver_video-common_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/deploy/MCUXpresso/sdk/xip/: driver_xip_board_evkmimxrt1060_MIMXRT1062.cmake  driver_xip_device_MIMXRT1062.cmake
1.GuiGuider_prject/bilibili_final/temp/: conf.json  simulator.h
2.RTT_project/rt1060_bsp_test/: .config  .config.old  .cproject  .project  rtconfig.h  template.uvguix.10798
2.RTT_project/rt1060_bsp_test/applications/lvgl/: lv_port_indev.c
4.Model/imxrt上板/: 0.一些数据.txt  imxrt上板-v2.STL  imxrt上板.DWG  imxrt上板.SLDPRT  imxrt上板.STL  imxrt上板.data  imxrt上板.gcode  轴和imxrt上板.data  轴和imxrt上板.gcode
